@@ -1,3 +1,7 @@
+2018-10-01  Alexei Podtelezhnikov  <apodtele@gmail.com>
+
+	* graph/x11/grx11.c (gr_x11_surface_init): Clean up window creation.
+
 2018-09-29  Alexei Podtelezhnikov  <apodtele@gmail.com>
 
 	* src/ftstring.c (Render_Waterfall): Mark the status size.
